syntax = "proto3";

package comment;

option go_package = "../comment";


service CommentService {
  rpc GetCommentCountByFeedID (CommentCountRequest) returns (CommentCountResponse) {}
//  rpc GetCommentsByUserID (CommentsByUserIDRequest) returns (CommentsByUserIDResponse) {}
}

message CommentCountRequest {
  int32 feed_id = 1;
}

message CommentCountResponse {
  int32 count = 1;
}

//message CommentsByUserIDRequest {
//  int32 user_id = 1;
//}
//
//message Comment {
//  int64 id = 1;
//  int64 feed_id = 2;
//  string comment_content = 3;
//}
//
//
//message CommentsByUserIDResponse {
//  repeated Comment comments = 1;
//}